--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Odin Recipes</h1>
        
-        <img src="./images/salad.jpg">
+        <img src="./images/salad.jpg" alt="Meme of women laughing while eating a salad. Text above the meme says: WHen your salad starts making jokes... ">
        
         <p> <h2>Welcome to my first website!</h2></p>
         <p>On this website, I will be sharing with you some of my favourite recipes. I hope that you enjoy them as much as my family does!</p>
