--- a/recipes/quinoa-salad.html
+++ b/recipes/quinoa-salad.html
@@ -7,5 +7,6 @@
 
     <body>
         <h1>Quinoa Salad</h1>
+        <img src="../images/quinoasalad.jpg" alt="Picture of a quinoa salad">
     </body>
 </html>
