Fix header formatting for Dressing Ingredients
Dressing Ingredients header was put at <h4> instead of <h3>, causing it
to be too big. I changed it to <h3> so it matches the Salad Ingredients
header.

--- a/recipes/quinoa-salad.html
+++ b/recipes/quinoa-salad.html
@@ -8,5 +8,33 @@
     <body>
         <h1>Quinoa Salad</h1>
         <img src="../images/quinoasalad.jpg" alt="Picture of a quinoa salad">
+
+        <p>Here is my world famous quinoa salad recipe! Refreshing, light, and healthy, it's quick and easy to make, and is a perfect dish to make for a barbeque.</p>
+        <p><h4>Ingredients:</h4></p>
+        <p><h5>Salad Ingredients</h5></p>
+        <p><ul>
+            <li>1 cup uncooked quinoa</li>
+            <li>1 tsp of better than boulion vegetable flavour</li>
+            <li>1/2 tbsp. cumin</li>
+            <li>1/2 tbsp. tumeric</li>
+            <li>1 tbsp. paprika</li>
+            <li>1 cucumber cubed</li>
+            <li>1 tomato cubed</li>
+            <li>1 bell pepper (red, yellow, or green) cubed</li>
+            <li>1 red onion minced</li>
+            <li>Fresh cilantro (optional and to taste)</li>
+            <li>Fetta cheese (optional and to taste)</li>
+        </ul>
+    </p>
+    <p><h4>Dressing Ingredients</h4></p>
+    <p><ul>
+        <li>1/2 cup olive oil</li>
+        <li>1/2 cup of lemon juice</li>
+        <li>1 clove of minced garic</li>
+        <li>1 tbsp honey</li>
+        <li>2 bunches of lemon thym minced</li>
+        <li>salt and pepper to taste</li>
+    </ul>
+    </p>
     </body>
 </html>
