Add steps to make quinoa salad recipe

--- a/recipes/quinoa-salad.html
+++ b/recipes/quinoa-salad.html
@@ -9,7 +9,7 @@
         <h1>Quinoa Salad</h1>
         <img src="../images/quinoasalad.jpg" alt="Picture of a quinoa salad">
 
-        <p>Here is my world famous quinoa salad recipe! Refreshing, light, and healthy, it's quick and easy to make, and is a perfect dish to make for a barbeque.</p>
+        <p>Here is my world famous quinoa salad recipe! Refreshing, light, and healthy, it's quick and easy to make, and is a perfect dish to make for a barbeque. It can be enjoyed cold or at room temperature.</p>
         <p><h4>Ingredients:</h4></p>
         <p><h5>Salad Ingredients</h5></p>
         <p><ul>
@@ -24,17 +24,28 @@
             <li>1 red onion minced</li>
             <li>Fresh cilantro (optional and to taste)</li>
             <li>Fetta cheese (optional and to taste)</li>
-        </ul>
-    </p>
-    <p><h4>Dressing Ingredients</h4></p>
+        </ul></p>
+    <p><h3>Dressing Ingredients</h3></p>
     <p><ul>
         <li>1/2 cup olive oil</li>
         <li>1/2 cup of lemon juice</li>
         <li>1 clove of minced garic</li>
         <li>1 tbsp honey</li>
         <li>2 bunches of lemon thym minced</li>
-        <li>salt and pepper to taste</li>
-    </ul>
-    </p>
+        <li>Salt and pepper to taste</li>
+    </ul></p>
+    <p><h4>Steps:</h4></p>
+    <p><ol>
+        <li>Rinse your quinoa with cool water.</li>
+        <li>Add your rinsed quinoa to a large saucepan and add two cups of cool water, along with your better than boulion and spices. Bring to a boil.</li>
+        <li>Once the quinoa is boiling, lower the temperature to medium heat and cover with a lid. Let simmer for 15-20 minutes, or until the quinoa has opened up and is tender.</li>
+        <li>While the quinoa is boiling, cut your vegeetables and add them to a large bowl.</li>
+        <li>Finely chop your fresh herbs and add them to the bowl.</li>
+        <li>Add all of the dressing ingredients to a pourable container and mix thoroughly. Keep to the side.</li>
+        <li>Once the quinoa is cooked and the water has been absorbed, fluff with a fork and allow it to cool in the pot for roughly 10 minuets. *If there's still water left but your quinoa is cooked, simmer carefully with the lid off while continuously stirring so that the liquid can evaporate and the quinoa won't burn.</li>
+        <li>Once the quinoa has cooled, add it to the bowl with your vegetables and herbs.</li>
+        <li>Add enough dressing for your taste and mix thoroughly.</li>
+        <li>Grab a fork, and enjoy!</li>
+    </ol></p>
     </body>
 </html>
