Change two in quinoa salad steps to 2

--- a/recipes/quinoa-salad.html
+++ b/recipes/quinoa-salad.html
@@ -37,7 +37,7 @@
     <p><h4>Steps:</h4></p>
     <p><ol>
         <li>Rinse your quinoa with cool water.</li>
-        <li>Add your rinsed quinoa to a large saucepan and add two cups of cool water, along with your better than boulion and spices. Bring to a boil.</li>
+        <li>Add your rinsed quinoa to a large saucepan and add 2 cups of cool water, along with your better than boulion and spices. Bring to a boil.</li>
         <li>Once the quinoa is boiling, lower the temperature to medium heat and cover with a lid. Let simmer for 15-20 minutes, or until the quinoa has opened up and is tender.</li>
         <li>While the quinoa is boiling, cut your vegeetables and add them to a large bowl.</li>
         <li>Finely chop your fresh herbs and add them to the bowl.</li>
