Create and write blueberry pie webpage and recipe
Created blueberry pie webpage and wrote the recipe. I used the code from
the quinoa salad recipe to keep the formatting consistent between
the three recipes.

--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -31,7 +31,7 @@
         <li>Siracha <em>optional</em></li>
     </ul></p>
     <p><h5><strong>Before you start:</strong></h5></p>
-    <p>Your wok should be <strong>hot</strong> and ready to cook right away. Gather and prepare your ingredients before heating the wok so you're able to add your ingredients without burning anyting.</p>
+    <p>Your wok should be <strong>hot</strong> and ready to cook right away. Gather and prepare your ingredients before heating the wok so you're able to add them without burning anyting.</p>
     <p><h4>Steps:</h4></p>
     <p><ol>
         <li>Add oil to your wok and heat on high until oil is shimmering.</li>
