--- a/recipes/quinoa-salad.html
+++ b/recipes/quinoa-salad.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Quinoa Salad</title>
+        <title>Bailee's Quinoa Salad</title>
     </head>
 
     <body>
