Link blueberry pie page to index page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
        <ul> 
            <li> <a href="./recipes/quinoa-salad.html"> <h3>Bailee's Quinoa Salad</h3></a></li>
            <li><a href="./recipes/fried-rice.html"><h3>Alex's Fried Rice</h3></a></li>
-           <li>Momma's Blueberry Pie</li>
+           <li><a href="./recipes/blueberry-pie.html"><h3>Momma's Blueberry Pie</h3></li></a>
+              
         </ul>
     </body>
 </html>
