Fix minor spelling and formatting errors

--- a/recipes/blueberry-pie.html
+++ b/recipes/blueberry-pie.html
@@ -9,7 +9,7 @@
         <h1>Momma's Blueberry Pie</h1>
         <img src="../images/blueberrypie.jpg" alt="Homemade blueberry pie with slices cut out">
 
-        <p>One of my all time favourite desserts, my mom's homemade blueberry pie is sure to not last long in any household. This recipe can be used with fresh or frozen blueberries. If you're using from frozen, be sure that the berries are left to defrost in a mesh collander for a few hours to allow the excess juice to drain, otherwise you'll get very, very juicy filling</p>
+        <p>One of my all time favourite desserts, my mom's homemade blueberry pie is sure to not last long in any household. This recipe can be used with fresh or frozen blueberries. If you're using berries from frozen, be sure that they are left to defrost in a mesh collander for a few hours to allow the excess juice to drain, otherwise you'll get very, very juicy filling</p>
         <p>You can use either homemade dough, or you can buy frozen, premade shells from the store. If you want to be authentic to my mom's recipe, grab yourself a box of Tenderflake when it's on sale ;)</p>
         <p><h4>Ingredients:</h4></p>
         <p><h5>Filling:</h5></p>
@@ -23,10 +23,11 @@
     <p><ul>
         <li>1 box of two Tenderflake pie shells</li>
     </ul></p>
+    <p><h4>Steps:</h4></p>
     <p><ol>
         <li>Preheat your oven to 425 F.</li>
         <li>Combine the first 5 ingredients in a large bowl.</li>
-        <li>Take one pastry shell out of the foil plate <em>(save these, they're a great garbage bowl or good for holding prepped ingredients) and palce it into a pie dish.</em></li>
+        <li>Take one pastry shell out of the foil plate <em>(save these, they're a great garbage bowl or good for holding prepped ingredients)</em> and palce it into a pie dish.</li>
         <li>Pour the mixture into the pastry shell.</li>
         <li>Dot with the butter.</li>
         <li>Top with the second pie shell and crimp edges closed. Using a shapr knife, cut steam holes in the top.</li>
